# choose

./: .gitignore  Cargo.toml  Makefile
src/: choice.rs  config.rs  main.rs
test/: bench.sh
