[package]
name = "choose"
version = "0.1.1"
authors = ["Ryan Geary <rtgnj42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.0"
regex = "1"
flame  = { version = "0.2.2", optional = true }
flamer = { version =   "0.3", optional = true }

[features]
default = []
flame_it = ["flame", "flamer"]

[profile.release]
debug = true
